--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -7,12 +7,13 @@
     "clean": "gts clean",
     "compile": "tsc -p .",
     "build-final": "cpy package.json build && cd build/ && npm install --production",
-    "ask-deploy": "rd -r ../../.ask/lambda && cd ../.. && ask deploy",
+    "ask-deploy": "cd ../../ && ask deploy",
     "test": "echo \"No test specified yet\" && exit 0",
     "lint-check": "gts check",
     "lint-clean": "gts clean",
     "lint-fix": "gts fix",
-    "build": "npm run clean && npm run test && npm run lint-check && npm run compile && npm run build-final && npm run ask-deploy",
+    "build": "npm run clean && npm run test && npm run lint-check && npm run compile && npm run build-final && node clean.js && npm run ask-deploy",
+    "build-dev": "npm run clean && npm run test && npm run lint-check && npm run compile && npm run build-final",
     "check": "gts check",
     "fix": "gts fix",
     "prepare": "npm.cmd run compile",
