--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -23,13 +23,12 @@
   "author": "Xavier Portilla Edo",
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/node-fetch": "^2.5.7",
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
+    "axios": "^0.19.0",
     "i18next": "^15.0.5",
-    "i18next-sprintf-postprocessor": "^0.2.2",
-    "node-fetch": "^2.6.1"
+    "i18next-sprintf-postprocessor": "^0.2.2"
   },
   "devDependencies": {
     "@types/node": "^10.0.3",
